--- a/styles.css
+++ b/styles.css
@@ -1268,3 +1268,28 @@ a:hover {
 .quiz-table tbody tr:last-child td {
     border-bottom: none;
 }
+
+/* Clock Widget */
+.clock-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px 0;
+}
+
+.clock-container {
+    width: 250px;
+    height: 250px;
+    max-width: 100%;
+}
+
+.clock-container svg {
+    width: 100%;
+    height: 100%;
+}
+
+.time-indicator {
+    font-size: 2em;
+    margin-bottom: 10px;
+    text-align: center;
+}
