--- a/articles/styles.css
+++ b/articles/styles.css
@@ -766,6 +766,8 @@ a:hover {
     .navbar-content {
         flex-wrap: wrap;
         height: auto;
+        flex-direction: column;
+        align-items: flex-start;
     }
 
     .navbar-buttons {
@@ -1403,6 +1405,8 @@ a:hover {
     .navbar-content {
         height: auto;
         flex-wrap: wrap;
+        flex-direction: column;
+        align-items: flex-start;
     }
 
     .navbar h1 {
